# goodmandu

./: .gitignore  Pipfile  README.md  manage.py  package.json  pyproject.toml  requirements.txt  webpack.config.js
assets/: .gitignore  package-lock.json  package.json  webpack.config.js
core/: admin.py  apis.py  context_processors.py  forms.py  models.py  renderers.py  serializers.py  urls.py  utils.py  views.py
core/fixtures/: ProjectStatus.json
core/migrations/: 0001_initial.py  0002_auto_20180408_0352.py  0002_project_tags.py  0003_auto_20180408_0359.py  0003_projectevent_tags.py  0004_auto_20180408_1022.py  0005_project_url.py  0006_auto_20180409_0130.py
core/templatetags/: core.py
neprojects/: settings.py  urls.py  wsgi.py
neprojects/settings/: base.py  dev.py
src/: index.js  index.scss
src/core/: admin.py  apis.py  context_processors.py  forms.py  models.py  serializers.py  stop_words.py  urls.py  views.py
src/core/fixtures/: EntityType.json  FlatPage.json  ProjectStatus.json  ProjectType.json
src/core/migrations/: 0001_initial.py
src/core/templatetags/: core.py
src/neprojects/: urls.py  wsgi.py
src/neprojects/settings/: base.py  dev.py  prod.py
src/templates/: app.html  base.html  index.html
src/templates/core/: project_detail.html  projectevent_detail.html
src/ui/: index.js  layout.js
static/: app.css  app.js
templates/: app.html  base.html  index.html
templates/core/: project_detail.html  project_list.html  projectevent_detail.html  projectevent_list.html
templates/flatpages/: default.html
(+1 files in other folders)
